fixes a z-index bug and another about authentication failed in login page

--- a/kernely/src/main/resources/css/style.css
+++ b/kernely/src/main/resources/css/style.css
@@ -620,11 +620,6 @@ legend{
 .ui-widget-overlay {
 	background: #666;
 	opacity: .50;
-	z-index:11 !important;
-}
-
-.ui-dialog{
-	z-index:12 !important;
 }
 
 .ui-widget-header{
